[package]
name = "mpir"
version = "0.3.5" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "partial Rust porting of mpir multiple precision library based on gmp mpfr"
keywords = ["mpir", "gmp", "mpfr", "multiple-precision", "bignum"]
categories = ["mathematics", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/mpir/"
homepage = "https://crates.io/crates/mpir"
repository = "https://github.com/nomissbowling/mpir"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

once_cell = { version = "=1.20.3" } # skip 1.21.0

# forward_ref = { version = "=1.0.0" }
# forward_ref_generic = { version = "=0.2.1" }
onforward_ref = { version = "=0.0.1" }

serial_test = { version = "=3.2.0" }

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]